--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>TaskCoin - Login</title>
+  <title>TaskCoin Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -13,23 +13,19 @@
   <input type="email" id="email" placeholder="Email" style="padding:10px;width:250px;"><br><br>
   <input type="password" id="password" placeholder="Password" style="padding:10px;width:250px;"><br><br>
 
-  <button onclick="signup()" style="padding:10px 20px;">Sign Up</button>
-  <button onclick="login()" style="padding:10px 20px;">Login</button>
-
+  <button onclick="signup()">Sign Up</button>
+  <button onclick="login()">Login</button>
   <br><br>
+  <button onclick="loginGoogle()">Login with Google</button>
 
-  <button onclick="loginGoogle()" style="padding:10px 20px;">
-    Login with Google
-  </button>
+  <p id="msg"></p>
 
-  <p id="msg" style="color:red;"></p>
-
-  <!-- Firebase SDK (COMPAT VERSION) -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
   <script>
-    // 🔐 Firebase Configuration (YOUR PROJECT)
     const firebaseConfig = {
       apiKey: "AIzaSyD5pHFDyLgn1Gd2h0MdGMfLv9VM_kQ3bsw",
       authDomain: "taskcoin-2be79.firebaseapp.com",
@@ -37,26 +33,30 @@
       appId: "1:103144012500:web:c6a01af9fac3af107b5941"
     };
 
-    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
+    const db = firebase.firestore();
 
-    // Email Signup
+    // Signup
     function signup() {
       auth.createUserWithEmailAndPassword(email.value, password.value)
-        .then(() => {
-          msg.innerText = "Signup successful";
-          msg.style.color = "green";
+        .then(userCred => {
+          const user = userCred.user;
+          // welcome bonus 10 coin
+          db.collection("users").doc(user.uid).set({
+            email: user.email,
+            coins: 10
+          });
+          window.location.href = "dashboard.html";
         })
         .catch(e => msg.innerText = e.message);
     }
 
-    // Email Login
+    // Login
     function login() {
       auth.signInWithEmailAndPassword(email.value, password.value)
         .then(() => {
-          msg.innerText = "Login successful";
-          msg.style.color = "green";
+          window.location.href = "dashboard.html";
         })
         .catch(e => msg.innerText = e.message);
     }
@@ -65,9 +65,18 @@
     function loginGoogle() {
       const provider = new firebase.auth.GoogleAuthProvider();
       auth.signInWithPopup(provider)
-        .then(() => {
-          msg.innerText = "Google login successful";
-          msg.style.color = "green";
+        .then(result => {
+          const user = result.user;
+          const ref = db.collection("users").doc(user.uid);
+          ref.get().then(doc => {
+            if (!doc.exists) {
+              ref.set({
+                email: user.email,
+                coins: 10
+              });
+            }
+            window.location.href = "dashboard.html";
+          });
         })
         .catch(e => msg.innerText = e.message);
     }
