--- a/dashboard.html
+++ b/dashboard.html
@@ -1,71 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>TaskCoin Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TaskCoin Login</title>
 </head>
+<body>
 
-<body style="font-family:Arial; text-align:center; margin-top:60px;">
+<h2>TaskCoin Login</h2>
 
-  <h2>Welcome to TaskCoin</h2>
+<input type="email" id="email" placeholder="Email"><br><br>
+<input type="password" id="password" placeholder="Password"><br><br>
 
-  <p id="email">Loading...</p>
-  <h3>🪙 Coins: <span id="coins">0</span></h3>
+<button onclick="signup()">Sign Up</button>
+<button onclick="login()">Login</button>
+<br><br>
+<button onclick="googleLogin()">Login with Google</button>
 
-  <br>
-  <button onclick="logout()">Logout</button>
+<p id="msg"></p>
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+  import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+  import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyD5pHFDyLgn1Gd2h0MdGMfLv9VM_kQ3bsw",
-      authDomain: "taskcoin-2be79.firebaseapp.com",
-      projectId: "taskcoin-2be79",
-      appId: "1:103144012500:web:c6a01af9fac3af107b5941"
-    };
+  const firebaseConfig = {
+    apiKey: "AIzaSyD5pHFDyLgn1Gd2h0MdGMfLv9VM_kQ3bsw",
+    authDomain: "taskcoin-2be79.firebaseapp.com",
+    projectId: "taskcoin-2be79",
+    storageBucket: "taskcoin-2be79.appspot.com",
+    messagingSenderId: "103144012500",
+    appId: "1:103144012500:web:c6a01af9fac3af107b5941"
+  };
 
-    firebase.initializeApp(firebaseConfig);
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
 
-    const auth = firebase.auth();
-    const db = firebase.firestore();
+  window.signup = async () => {
+    const email = email.value;
+    const password = password.value;
 
-    auth.onAuthStateChanged(user => {
-      if (!user) {
-        window.location.href = "index.html";
-        return;
+    try {
+      const userCred = await createUserWithEmailAndPassword(auth, email, password);
+      const uid = userCred.user.uid;
+
+      await setDoc(doc(db, "users", uid), {
+        email: email,
+        coins: 10,
+        createdAt: new Date()
+      });
+
+      msg.innerText = "Signup successful! 10 coins added 🎉";
+    } catch (e) {
+      msg.innerText = e.message;
+    }
+  };
+
+  window.login = async () => {
+    const email = email.value;
+    const password = password.value;
+
+    try {
+      const userCred = await signInWithEmailAndPassword(auth, email, password);
+      const uid = userCred.user.uid;
+
+      const snap = await getDoc(doc(db, "users", uid));
+      msg.innerText = "Login success! Coins: " + snap.data().coins;
+    } catch (e) {
+      msg.innerText = e.message;
+    }
+  };
+
+  window.googleLogin = async () => {
+    const provider = new GoogleAuthProvider();
+    try {
+      const userCred = await signInWithPopup(auth, provider);
+      const uid = userCred.user.uid;
+
+      const ref = doc(db, "users", uid);
+      const snap = await getDoc(ref);
+
+      if (!snap.exists()) {
+        await setDoc(ref, {
+          email: userCred.user.email,
+          coins: 10,
+          createdAt: new Date()
+        });
       }
 
-      document.getElementById("email").innerText = "Email: " + user.email;
-
-      const ref = db.collection("users").doc(user.uid);
-
-      ref.get().then(doc => {
-        if (!doc.exists) {
-          // FIRST TIME USER → GIVE WELCOME BONUS
-          ref.set({
-            email: user.email,
-            coins: 10
-          });
-          document.getElementById("coins").innerText = 10;
-        } else {
-          // EXISTING USER
-          const data = doc.data();
-          document.getElementById("coins").innerText = data.coins ?? 10;
-        }
-      });
-    });
-
-    function logout() {
-      auth.signOut().then(() => {
-        window.location.href = "index.html";
-      });
+      msg.innerText = "Google login success! 🎉";
+    } catch (e) {
+      msg.innerText = e.message;
     }
-  </script>
+  };
+</script>
 
 </body>
 </html>
