--- a/index.html
+++ b/index.html
@@ -1,189 +1,105 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>TaskCoin</title>
+  <meta charset="UTF-8">
+  <title>TaskCoin Login</title>
+
+  <!-- VERY IMPORTANT FOR MOBILE -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     * {
       box-sizing: border-box;
+      font-family: Arial, sans-serif;
     }
 
     body {
       margin: 0;
-      height: 100vh;
-      background: linear-gradient(135deg, #141e30, #243b55);
+      min-height: 100vh;
       display: flex;
-      justify-content: center;
       align-items: center;
-      font-family: 'Segoe UI', sans-serif;
-      color: #fff;
+      justify-content: center;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
     }
 
-    .box {
-      width: 320px;
-      background: #0f172a;
-      padding: 30px 25px;
-      border-radius: 16px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+    .login-box {
+      width: 90%;
+      max-width: 400px;
+      background: #111827;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 15px 40px rgba(0,0,0,0.4);
       text-align: center;
+      color: white;
     }
 
-    h2 {
+    .login-box h2 {
       margin-bottom: 5px;
-      color: #38bdf8;
     }
 
-    .sub {
-      font-size: 13px;
-      color: #94a3b8;
+    .login-box p {
+      font-size: 14px;
+      color: #9ca3af;
       margin-bottom: 20px;
     }
 
     input {
       width: 100%;
       padding: 12px;
-      margin: 8px 0;
+      margin-bottom: 12px;
       border-radius: 8px;
       border: none;
-      outline: none;
-      font-size: 14px;
+      font-size: 16px;
     }
 
-    .btn {
+    button {
       width: 100%;
       padding: 12px;
-      margin-top: 10px;
-      border-radius: 10px;
+      border-radius: 8px;
       border: none;
-      font-size: 15px;
-      font-weight: bold;
+      font-size: 16px;
       cursor: pointer;
-      transition: 0.3s;
+      margin-top: 8px;
     }
 
-    .signup {
-      background: linear-gradient(135deg, #22c55e, #16a34a);
-      color: #fff;
+    .btn-green {
+      background: #22c55e;
+      color: white;
     }
 
-    .login {
-      background: linear-gradient(135deg, #38bdf8, #0284c7);
-      color: #fff;
+    .btn-blue {
+      background: #3b82f6;
+      color: white;
     }
 
-    .google {
-      background: #fff;
-      color: #000;
-      margin-top: 14px;
+    .btn-white {
+      background: white;
+      color: black;
     }
 
-    .btn:hover {
-      transform: scale(1.03);
-      opacity: 0.9;
-    }
-
-    #msg {
-      margin-top: 15px;
-      font-size: 13px;
-      color: #facc15;
+    .success {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #22c55e;
     }
   </style>
 </head>
 
 <body>
 
-  <div class="box">
+  <div class="login-box">
     <h2>TaskCoin</h2>
-    <div class="sub">Earn coins by completing tasks</div>
+    <p>Earn coins by completing tasks</p>
 
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
+    <input type="email" placeholder="Email">
+    <input type="password" placeholder="Password">
 
-    <button class="btn signup" onclick="signup()">Create Account</button>
-    <button class="btn login" onclick="login()">Login</button>
+    <button class="btn-green">Create Account</button>
+    <button class="btn-blue">Login</button>
+    <button class="btn-white">Continue with Google</button>
 
-    <button class="btn google" onclick="googleLogin()">Continue with Google</button>
-
-    <div id="msg"></div>
+    <div class="success">Login successful • Coins: 10</div>
   </div>
-
-  <!-- Firebase SDK -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-    import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyD5pHFDyLgn1Gd2h0MdGMfLv9VM_kQ3bsw",
-      authDomain: "taskcoin-2be79.firebaseapp.com",
-      projectId: "taskcoin-2be79",
-      storageBucket: "taskcoin-2be79.appspot.com",
-      messagingSenderId: "103144012500",
-      appId: "1:103144012500:web:c6a01af9fac3af107b5941"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
-
-    window.signup = async function () {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      try {
-        const res = await createUserWithEmailAndPassword(auth, email, password);
-        const uid = res.user.uid;
-
-        await setDoc(doc(db, "users", uid), {
-          email: email,
-          coins: 10
-        });
-
-        document.getElementById("msg").innerText = "Signup successful 🎉 Welcome bonus: 10 coins";
-      } catch (e) {
-        document.getElementById("msg").innerText = e.message;
-      }
-    };
-
-    window.login = async function () {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      try {
-        const res = await signInWithEmailAndPassword(auth, email, password);
-        const uid = res.user.uid;
-
-        const snap = await getDoc(doc(db, "users", uid));
-        const coins = snap.exists() ? snap.data().coins : 0;
-
-        document.getElementById("msg").innerText = "Login successful 💰 Coins: " + coins;
-      } catch (e) {
-        document.getElementById("msg").innerText = e.message;
-      }
-    };
-
-    window.googleLogin = async function () {
-      const provider = new GoogleAuthProvider();
-
-      try {
-        const res = await signInWithPopup(auth, provider);
-        const uid = res.user.uid;
-        const ref = doc(db, "users", uid);
-        const snap = await getDoc(ref);
-
-        if (!snap.exists()) {
-          await setDoc(ref, {
-            email: res.user.email,
-            coins: 10
-          });
-        }
-
-        document.getElementById("msg").innerText = "Google login successful 🎉";
-      } catch (e) {
-        document.getElementById("msg").innerText = e.message;
-      }
-    };
-  </script>
 
 </body>
 </html>
