--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
 
     <div class="success">Login successful • Coins: 10</div>
   </div>
+<script>
+  document.querySelector(".btn-blue").addEventListener("click", () => {
+    window.location.href = "dashboard-new.html";
+  });
 
+  document.querySelector(".btn-green").addEventListener("click", () => {
+    window.location.href = "dashboard-new.html";
+  });
+
+  document.querySelector(".btn-white").addEventListener("click", () => {
+    window.location.href = "dashboard-new.html";
+  });
+</script>
 </body>
 </html>
